--- a/nootebooks/001_data_engineering.ipynb
+++ b/nootebooks/001_data_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c8a1cea2",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import plotly.express as px\n"
    ]
   },
   {
@@ -330,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f190d556",
    "metadata": {},
    "outputs": [
@@ -349,7 +350,6 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "# Filtramos solo columnas numéricas (excluye f_analisis si lo parseaste a datetime)\n",
     "numeric_cols = df.select_dtypes(include=['float64', 'int64']).drop(columns=['default']).columns\n",
     "\n",
     "# Boxplots para detectar outliers por variable\n",
@@ -360,8 +360,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# Alternativa: resumen estadístico extendido\n",
-    "# df[numeric_cols].describe(percentiles=[.01, .05, .25, .5, .75, .95, .99])\n"
+    "\n"
    ]
   },
   {
@@ -797,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "08ba1f0d",
    "metadata": {},
    "outputs": [
@@ -1671,7 +1670,6 @@
     }
    ],
    "source": [
-    "import plotly.express as px\n",
     "\n",
     "# Calcular porcentaje de valores nulos por columna\n",
     "porcentaje_nulos = round(df_limpio.isnull().mean(),4) * 100\n",
