commit final, que sea lo que dios quiera, gracias a todos, manifestando pasar a la vacante

--- a/nootebooks/001_data_engineering.ipynb
+++ b/nootebooks/001_data_engineering.ipynb
@@ -302,16 +302,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef8e14a7",
-   "metadata": {},
-   "source": [
-    "## Tipologia de las variables\n",
-    "\n",
-    "Se encontro que la tipologia de las variables va muy acorde a lo que se entrega en el archivo de diccionario, por lo tanto se deja tal cual esta"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "39035302",
    "metadata": {},
    "source": [
@@ -447,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "6e227b94",
    "metadata": {},
    "outputs": [
@@ -474,10 +464,9 @@
     "numeric_cols_v2 = df.select_dtypes(include=['float64', 'int64']).drop(columns=['default']).columns\n",
     "\n",
     "\n",
-    "# Asegurarse de que 'df' y 'numeric_cols' ya estén definidos\n",
     "num_plots = len(numeric_cols_v2[:25])\n",
     "ncols = 5\n",
-    "nrows = (num_plots + ncols - 1) // ncols  # Cálculo para determinar el número de filas necesarias\n",
+    "nrows = (num_plots + ncols - 1) // ncols  \n",
     "\n",
     "fig, axes = plt.subplots(nrows, ncols, figsize=(ncols * 4, nrows * 3))\n",
     "axes = axes.flatten()\n",
@@ -487,7 +476,6 @@
     "    sns.histplot(df[col], kde=True, bins=50, ax=ax)\n",
     "    ax.set_title(f'Distribución de {col}')\n",
     "\n",
-    "# Ocultar ejes extra si es que existen\n",
     "for ax in axes[num_plots:]:\n",
     "    ax.set_visible(False)\n",
     "\n",
@@ -533,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "05c633a8",
    "metadata": {},
    "outputs": [
@@ -659,7 +647,6 @@
     }
    ],
    "source": [
-    "# Generamos el dataframe de pares: variable 1, variable 2 y la correlación entre ambas\n",
     "corr_pairs = (\n",
     "    corr_matrix.where(np.triu(np.ones(corr_matrix.shape), k=1).astype(bool))\n",
     "    .stack()\n",
@@ -681,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "b544b907",
    "metadata": {},
    "outputs": [
@@ -702,13 +689,11 @@
     "    upper_val = s.quantile(upper)\n",
     "    return s.clip(lower=lower_val, upper=upper_val)\n",
     "\n",
-    "# Aplicar en variables identificadas\n",
     "for col in numeric_cols_v2:\n",
     "    df[col] = winsorize_series(df[col])\n",
     "\n",
-    "# graficar nuevamente para ver el efecto de winsorización\n",
     "plt.figure(figsize=(10,5))\n",
-    "for i, col in enumerate(numeric_cols_v2[:25]):  # puedes ajustar el rango\n",
+    "for i, col in enumerate(numeric_cols_v2[:25]):  \n",
     "    plt.subplot(5, 5, i + 1)\n",
     "    sns.violinplot(x=df[col], inner='quartile')\n",
     "plt.tight_layout()\n",
@@ -1676,7 +1661,6 @@
     "porcentaje_nulos = porcentaje_nulos.reset_index()\n",
     "porcentaje_nulos.columns = ['Columna', 'Porcentaje de Nulos']\n",
     "\n",
-    "# Crear gráfico interactivo\n",
     "fig = px.bar(porcentaje_nulos,\n",
     "             x='Columna',\n",
     "             y='Porcentaje de Nulos',\n",
@@ -1689,7 +1673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "3524d571",
    "metadata": {},
    "outputs": [
@@ -1702,11 +1686,7 @@
     }
    ],
    "source": [
-    "# ========================\n",
-    "# Tratamiento de Nulos\n",
-    "# ========================\n",
     "\n",
-    "# 1. Imputar variables categorizadas con 'desconocido'\n",
     "categorical_with_nans = ['disp309', 'CO02MOR092TO', 'CO01MOR098RO']\n",
     "\n",
     "for col in categorical_with_nans:\n",
@@ -1714,10 +1694,8 @@
     "        df_limpio[col] = df_limpio[col].cat.add_categories('desconocido')\n",
     "    df_limpio[col] = df_limpio[col].fillna('desconocido')\n",
     "\n",
-    "# 2. Imputar variable discreta CO01NUM002AH con la moda\n",
     "df_limpio['CO01NUM002AH'] = df_limpio['CO01NUM002AH'].fillna(df_limpio['CO01NUM002AH'].mode()[0])\n",
     "\n",
-    "# validar que no queden nulos\n",
     "print(f'Cantidad de valores nulos luego de imputar: {df_limpio.isnull().sum().sum()}')\n"
    ]
   },
