--- a/nootebooks/003_feature_selection.ipynb
+++ b/nootebooks/003_feature_selection.ipynb
@@ -2,21 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bd985763",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "import os\n",
     "\n",
-    "# Usar el directorio de trabajo actual en lugar de __file__\n",
+    "import os\n",
+    "import sys\n",
+    "\n",
     "path = os.getcwd()\n",
     "sys.path.insert(0, os.path.join(path, '..', 'src'))\n",
     "\n",
-    "import data_preparation as dp\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import data_preparation as dp\n",
+    "\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.feature_selection import SelectFromModel\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "\n",
+    "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
@@ -32,15 +47,6 @@
     "\n",
     "cleaner = dp.DataCleaner()\n",
     "df = cleaner.clean(df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "37bc0e22",
-   "metadata": {},
-   "source": [
-    " Justificación (en una línea):\n",
-    "Se aplica undersampling 3:1 para reducir el sesgo del modelo hacia la clase mayoritaria, manteniendo suficiente información real sin crear datos sintéticos."
    ]
   },
   {
@@ -61,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "dd6d830c",
    "metadata": {},
    "outputs": [
@@ -94,9 +100,8 @@
     "    random_state=42\n",
     ")\n",
     "\n",
-    "# Combinar el nuevo dataset balanceado\n",
     "df_balanced = pd.concat([df_majority_downsampled, df_minority])\n",
-    "df_balanced = df_balanced.sample(frac=1, random_state=42)  # Mezclar filas\n",
+    "df_balanced = df_balanced.sample(frac=1, random_state=42)  \n",
     "\n",
     "df_balanced['default'].value_counts()"
    ]
@@ -111,15 +116,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2e1226dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
-    "from sklearn.impute import SimpleImputer\n",
     "\n",
     "# Separación de variables numéricas y categóricas\n",
     "numerical_cols = df.select_dtypes(include=['int64', 'float64']).drop(columns=['default']).columns.tolist()\n",
@@ -143,18 +144,15 @@
     "    ('cat', categorical_pipeline, categorical_cols)\n",
     "])\n",
     "\n",
-    "# Separar variable objetivo\n",
     "y = df['default']\n",
     "X = df.drop(columns=['default'])\n",
     "\n",
     "# Aplicar preprocesamiento\n",
     "X_preprocessed = preprocessor.fit_transform(X)\n",
     "\n",
-    "# Si quieres obtener nombres de columnas después del encoding (opcional, para análisis)\n",
     "ohe_columns = preprocessor.named_transformers_['cat']['encoder'].get_feature_names_out(categorical_cols)\n",
     "processed_columns = numerical_cols + ohe_columns.tolist()\n",
     "\n",
-    "# Convertimos a DataFrame para análisis posterior\n",
     "X_preprocessed_df = pd.DataFrame(X_preprocessed, columns=processed_columns)"
    ]
   },
@@ -199,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "155c35b5",
    "metadata": {},
    "outputs": [
@@ -301,25 +299,18 @@
     }
    ],
    "source": [
-    "# Extrae solo las columnas numéricas excluyendo 'default'\n",
     "X_numeric = X_preprocessed_df.select_dtypes(include=[np.number])\n",
     "\n",
-    "# Calcula la matriz de correlación absoluta\n",
     "corr_matrix = X_numeric.corr().abs()\n",
     "\n",
-    "# Parte superior de la matriz\n",
     "upper = corr_matrix.where(np.triu(np.ones(corr_matrix.shape), k=1).astype(bool))\n",
     "\n",
-    "# Variables con correlación > 0.9\n",
     "threshold_corr = 0.8\n",
     "to_drop_corr = [column for column in upper.columns if any(upper[column] > threshold_corr)]\n",
     "\n",
-    "# Elimina las columnas correlacionadas del conjunto original\n",
     "X_corr_filtered = X_numeric.drop(columns=to_drop_corr)\n",
     "\n",
     "print(f\"Variables eliminadas por correlación alta ({threshold_corr}):\\n{to_drop_corr}\")\n",
-    "# dataframe con las correlaciones\n",
-    "# Generamos el dataframe de pares: variable 1, variable 2 y la correlación entre ambas\n",
     "corr_pairs = (\n",
     "    corr_matrix.where(np.triu(np.ones(corr_matrix.shape), k=1).astype(bool))\n",
     "    .stack()\n",
@@ -332,16 +323,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "38e50ff4",
-   "metadata": {},
-   "source": [
-    "Se eliminaron las variables trx158, CO01END094RO y CO01ACP011RO por presentar alta correlación (> 0.8) con otras variables (trx39, CO01END010RO, y CO02NUM043RO respectivamente). Esta eliminación se realizó para evitar redundancia de información, reducir la multicolinealidad y mejorar la estabilidad e interpretabilidad del modelo, en línea con buenas prácticas analíticas e IFRS 9. Se conservaron las variables con mayor representatividad y cobertura de datos."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "662fdfb5",
    "metadata": {},
    "outputs": [
@@ -370,15 +353,12 @@
     }
    ],
    "source": [
-    "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# Escala los datos antes de calcular VIF (mejor estabilidad numérica)\n",
+    "\n",
     "scaler = StandardScaler()\n",
     "X_scaled = scaler.fit_transform(X_corr_filtered)\n",
     "X_scaled_df = pd.DataFrame(X_scaled, columns=X_corr_filtered.columns)\n",
     "\n",
-    "# Iterativamente elimina variables con VIF alto\n",
     "threshold_vif = 10\n",
     "vif_data = pd.DataFrame()\n",
     "features = list(X_scaled_df.columns)\n",
@@ -405,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "cef92d19",
    "metadata": {},
    "outputs": [
@@ -429,40 +409,27 @@
     }
    ],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.feature_selection import SelectFromModel\n",
     "\n",
-    "# Supongamos que y ya está definido como variable objetivo\n",
+    "\n",
     "y = df['default']\n",
     "\n",
-    "# Entrena Lasso con penalización L1\n",
     "lasso_model = LogisticRegression(penalty='l1', solver='liblinear', C=0.01)\n",
     "lasso_model.fit(X_vif_filtered, y)\n",
     "\n",
-    "# Selecciona variables con coeficientes distintos de cero\n",
     "selector = SelectFromModel(lasso_model, prefit=True)\n",
     "X_lasso_selected = X_vif_filtered.loc[:, selector.get_support()]\n",
     "\n",
     "print(f\"Variables seleccionadas con Lasso:\\n{list(X_lasso_selected.columns)}\")\n",
     "\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "# Suponemos que ya tienes X_vif_filtered y y\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_vif_filtered, y, test_size=0.3, random_state=42)\n",
     "\n",
-    "# Entrenamos un Random Forest\n",
     "rf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "rf.fit(X_train, y_train)\n",
     "\n",
-    "# Obtenemos las importancias de características\n",
     "importances = pd.Series(rf.feature_importances_, index=X_vif_filtered.columns)\n",
     "importances_sorted = importances.sort_values(ascending=False)\n",
     "\n",
-    "# Seleccionamos el top 20% más importante\n",
+    "# Seleccionamos el top 30 más importante\n",
     "\n",
     "top_features = importances_sorted.head(30)\n",
     "\n",
