--- a/nootebooks/004_model_selection.ipynb
+++ b/nootebooks/004_model_selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "fa1125f0",
    "metadata": {},
    "outputs": [
@@ -16,31 +16,36 @@
     }
    ],
    "source": [
-    "import sys\n",
+    "\n",
     "import os\n",
+    "import sys\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "# Usar el directorio de trabajo actual en lugar de __file__\n",
     "path = os.getcwd()\n",
     "sys.path.insert(0, os.path.join(path, '..', 'src'))\n",
     "\n",
+    "\n",
     "import data_preprocesing as dp\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import mlflow\n",
     "\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.metrics import f1_score, precision_score, recall_score, roc_auc_score, confusion_matrix, classification_report\n",
+    "from sklearn.metrics import (\n",
+    "    f1_score, precision_score, recall_score,\n",
+    "    roc_auc_score, confusion_matrix, classification_report\n",
+    ")\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from xgboost import XGBClassifier\n",
     "from lightgbm import LGBMClassifier\n",
-    "from mlflow.models.signature import infer_signature\n",
+    "\n",
     "import mlflow\n",
-    "import mlflow.sklearn"
+    "import mlflow.sklearn\n",
+    "from mlflow.models.signature import infer_signature\n"
    ]
   },
   {
@@ -118,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "712cdb5a",
    "metadata": {},
    "outputs": [
@@ -131,7 +136,6 @@
     }
    ],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "preprocesor = dp.ModelPreprocessor()\n",
     "X, y = preprocesor.transform(df)\n",
@@ -153,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "aa4f06d1",
    "metadata": {},
    "outputs": [],
@@ -172,7 +176,7 @@
     "        grid_search.fit(X_train, y_train)\n",
     "        best_model = grid_search.best_estimator_\n",
     "\n",
-    "        # Evaluación interna\n",
+    "        \n",
     "        y_pred = best_model.predict(X_test)\n",
     "        y_proba = best_model.predict_proba(X_test)[:, 1]\n",
     "\n",
@@ -195,7 +199,7 @@
     "        print(f\"\\n✅ {model_name} -> F1: {f1:.4f}, Precision: {precision:.4f}, Recall: {recall:.4f}, AUC: {auc:.4f}\")\n",
     "        print(\"📊 Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred))\n",
     "\n",
-    "        return best_model  # 👈 aquí está la clave\n"
+    "        return best_model \n"
    ]
   },
   {
@@ -242,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "45ffe668",
    "metadata": {},
    "outputs": [
@@ -752,9 +756,6 @@
     }
    ],
    "source": [
-    "# ============================\n",
-    "# 5. Entrenamiento\n",
-    "# ============================\n",
     "\n",
     "train_with_gridsearch(\n",
     "    X_train, X_test, y_train, y_test,\n",
@@ -1476,7 +1477,12 @@
     "recall_val = recall_score(y_val, y_pred_val)\n",
     "auc_val = roc_auc_score(y_val, y_proba_val)\n",
     "print(f\"\\n✅ LightGBM Optimo -> F1: {f1_val:.4f}, Precision: {precision_val:.4f}, Recall: {recall_val:.4f}, AUC: {auc_val:.4f}\")\n",
-    "print(\"📊 Confusion Matrix:\\n\", confusion_matrix(y_val, y_pred_val))\n"
+    "print(\"📊 Confusion Matrix:\\n\", confusion_matrix(y_val, y_pred_val))\n",
+    "\n",
+    "# Guardar el modelo final\n",
+    "import joblib\n",
+    "model_path = r'..\\models\\lightgbm_optimo.pkl'\n",
+    "joblib.dump(best_model, model_path)"
    ]
   }
  ],
